<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

    <ImageView
        android:id="@+id/iv_user_photo"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/imagetools"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/iv_user_photo"
            app:layout_constraintTop_toTopOf="@+id/iv_user_photo"
            android:layout_marginStart="7dp"
            android:text="@string/txt_name_tools"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginLeft="7dp" />
        <TextView
            android:id="@+id/tv_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_user_name"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_name"
            android:text="@string/txt_login_tools"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tv_tweet_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_user_login"
            app:layout_constraintBottom_toBottomOf="@id/tv_user_login"
            android:textSize="14sp"
            android:text="@string/txt_time_tools"

            />
        <TextView
            android:textSize="14sp"
            android:text="@string/txt_tweet_tools"
            android:id="@+id/tv_tweet"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintStart_toStartOf="@id/tv_user_name"
            app:layout_constraintBottom_toTopOf="@+id/chip_coments"
            />
        <com.google.android.material.chip.Chip
            android:backgroundTint="@color/white"
            app:chipIconTint="@color/gray"
            android:id="@+id/chip_coments"
            android:textSize="14sp"
            android:text="@string/txt_coments_number"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="@id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@id/tv_tweet"
            app:chipIcon="@drawable/ic_baseline_mode_comment_24"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <com.google.android.material.chip.Chip
            android:backgroundTint="@color/white"
            app:chipIconTint="@color/gray"
            android:id="@+id/chip_retweet"
            android:textSize="14sp"
            android:text="@string/txt_coments_number"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintStart_toEndOf="@id/chip_coments"
            app:layout_constraintTop_toBottomOf="@id/tv_tweet"
            app:chipIcon="@drawable/ic_baseline_repeat_24"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />
        <com.google.android.material.chip.Chip
            android:backgroundTint="@color/white"
            app:chipIconTint="@color/gray"
            android:id="@+id/chip_favority"
            android:textSize="14sp"
            android:text="@string/txt_coments_number"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintStart_toEndOf="@id/chip_retweet"
            app:layout_constraintTop_toBottomOf="@id/tv_tweet"
            app:chipIcon="@id/chip_favority"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />
        <com.google.android.material.chip.Chip
            android:backgroundTint="@color/white"
            app:chipIconTint="@color/gray"
            android:id="@+id/chip_upload"
            android:textSize="14sp"
            android:text="@string/txt_coments_number"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintStart_toEndOf="@id/chip_favority"
            app:layout_constraintTop_toBottomOf="@id/tv_tweet"
            app:chipIcon="@drawable/upload_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>